# bazel-watch-test-repro

./: BUILD.bazel  README.md  WORKSPACE  test-runner.js  test.js
